--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "framer-motion": "^11.3.24",
     "geist": "^1.3.1",
     "lucide-react": "^0.400.0",
-    "next": "14.2.4",
+    "next": "^14.2.14",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
